fix(app component / app-layout): fix collapse block on navbar in tablet/mobile screen. Add media query to fix empty space in sidebar

--- a/projects/rlb/ng-bootstrap/src/assets/scss/rlb/app-layout.scss
+++ b/projects/rlb/ng-bootstrap/src/assets/scss/rlb/app-layout.scss
@@ -32,3 +32,19 @@
     width: calc(100% - $sidebar-width);
   }
 }
+
+@media (max-width: 992px) {
+  .rlb-content {
+    left: 0 !important;
+    width: 100% !important;
+  }
+}
+
+@media (max-width: 992px) {
+  .navbar-collapse {
+    background-color: $header-dark-bg;
+    padding: 1rem;
+    border-top: 1px solid rgba(0, 0, 0, .1);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, .15);
+  }
+}
